package Clase1804.Clases;

public class Filosofia extends Libro {
   
    public Filosofia(){
       this.setCategoria("Filosofia");
    }
}
