package Clase1804.Clases;

public class Informatica extends Libro {
    

    public Informatica(){
        this.setCategoria("Informatica");
    }
}
