package Clase1804.Clases;

public class Matematica extends Libro {
    
    public Matematica(){
        this.setCategoria("Matematica");
    }
}
